--- a/elementGuanlixitong/elementclient/package.json
+++ b/elementGuanlixitong/elementclient/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "date-fns": "^2.1.0",
     "element-ui": "^2.12.0",
     "jwt-decode": "^2.2.0",
     "vue": "^2.5.2",
